--- a/Widgets/app/src/main/AndroidManifest.xml
+++ b/Widgets/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".MiWidget"
+            android:label="Mi Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/miwidget_wprovider"/>
+        </receiver>
     </application>
 
 </manifest>
